# chrome-elevator

./: .dockerignore  .gitignore  Cargo.toml  Makefile  build.rs
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/decryption/: browser.rs  com.rs  crypto.rs  extractor.rs  mod.rs
src/ffi/: mod.rs
src/injection/: memory.rs  mod.rs  process.rs  reflective_loader.rs
src/obfuscation/: keys.rs  mod.rs  strings.rs
tests/: integration_tests.rs
