[package]
name = "chrome-elevator"
version = "0.17.0"
edition = "2021"
authors = ["Rust Port"]

[dependencies]
# Windows API
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Com",
    "Win32_Security_Cryptography",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }

# 加密
aes-gcm = "0.10"
chacha20 = "0.9"
sha2 = "0.10"

# 数据处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
base64 = "0.21"
chrono = "0.4"

# 工具
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = "z"          # 优化大小
lto = true               # 链接时优化
codegen-units = 1        # 单个代码生成单元
panic = "abort"          # 减小二进制大小
strip = true             # 移除符号

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.aarch64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
